2005-08-06  Chris Taylor  <chris@icculus.org>

	* main/automap.c: must_free_canvas isn't used when
	AUTOMAP_DIRECT_RENDER is defined (whoops)

2005-08-02  Chris Taylor  <chris@icculus.org>

	* 2d/bitblt.c, 2d/bitmap.c, 2d/pixel.c, 2d/rect.c, 2d/rle.c,
	3d/draw.c, 3d/instance.c, 3d/matrix.c, 3d/points.c, 3d/rod.c,
	3d/setup.c,
	include/3d.h, include/palette.h,
	main/automap.c, main/cntrlcen.c, main/credits.c, main/endlevel.c,
	main/escort.c, main/game.c, main/game.h, main/gamecntl.c,
	main/gamerend.c, main/gameseq.c, main/gauges.c, main/hud.c,
	main/kconfig.c, main/kmatrix.c, main/menu.c, main/newmenu.c,
	main/object.c, main/paging.c, main/piggy.c, main/scores.c,
	main/state.c, main/titles.c:
	remove DirectDraw use and Windows mouse stuff made redundant by SDL
	(lots of WINDOWS code).
	Makes cockpit draw properly in SDL

2005-07-30  Chris Taylor  <chris@icculus.org>

	* 2d/2dsline.c, 2d/bitblt.c, 2d/bitmap.c, 2d/font.c, 2d/ibitblt.c,
	2d/palette.c, 2d/pcx.c, 2d/rle.c,
	include/gr.h,
	main/automap.c, main/config.c, main/credits.c, main/escort.c,
	main/game.c, main/gamecntl.c, main/gamepal.c, main/gamerend.c,
	main/gameseq.c, main/gauges.c, main/hud.c, main/inferno.c,
	main/kconfig.c, main/kmatrix.c, main/menu.c, main/movie.c,
	main/newmenu.c, main/object.c, main/playsave.c, main/polyobj.c,
	main/render.c, main/state.c, main/texmerge.c, main/titles.c:
	remove all the redundant Polygon Acceleration stuff
	(include/pa_enabl.h)

	* 2d/bitblt.c, main/gamerend.c, main/inferno.c, main/object.c,
	main/polyobj.c: remove old _3DFX code

	* 2d/bitblt.c, 2d/ibitblt.c, include/gr.h, include/ibitblt.h,
	main/game.c, main/game.h, main/gamecntl.c, main/gamerend.c,
	main/gauges.c, main/hud.c: remove pixel double code

2005-07-29  Chris Taylor  <chris@icculus.org>

	* 2d/font.c: show some missing wide 1's (bug #2269)

	* main/game.c: only shoot when fire button down (fix bug #2271)

2005-07-28  Chris Taylor  <chris@icculus.org>
